=========================================================================
CHANGE LOG
=========================================================================

2011-05-02 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* fixed shader bug

	* v1.4.1 release

2011-04-20 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* finished the state counter

	* all measures now work inter-distance, and
	  honor object states

	* selecting/picking now works as we'd expect, with 
	  respect to states

	* improved shaders; added fog, fixed rendering issues

	* bug fix for possible crash

2011-04-20 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* freezing colors the states blue

	* added out of bounds checks for showing states; those
	  beyond are shown as "--"

2011-04-20 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* state_counter_mode

	* fixed bg_gradient coloring

	* added small dictionary for xray space groups

	* get_names and safe names 

2011-04-01 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* transparent ribbons

	* naive volume ray tracing; better version coming soon

	* small bug fixes

2011-04-01 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* introducing gradient backgrounds (non-ray tracing; testing)

	* Windows bug fixes

	* Rlight-click Volumes fix

2011-04-01 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* PyMOL v1.4b1 -- adds volumes, glew, shaders, bug fixes, etc

2011-02-03 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* Added PyMOL Web Services API; for information run
	  firefox pymol/modules/web/examples/index.html

2011-01-18 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* Cygwin build fix (thanks Alex)

2011-01-18 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* mol2 atom types

2011-01-11 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* mol2 multi-state save bugfix

2011-01-11 Jason Vertrees <Jason.Vertrees@schrodinger.com>

	* added mol2.py
	* File->Save Moleulce
